src/test/ui/typeck/typeck-auto-trait-no-supertraits-2.stderr
error[E0568]: auto traits cannot have super traits
  --> $DIR/typeck-auto-trait-no-supertraits-2.rs:3:1
   |
LL | auto trait Magic : Sized where Option<Self> : Magic {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

